# pseudoc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.org  para.psc  semi.psc  simple.psc  test.psc
.github/workflows/: build.yml
pseudoc-gui/: Cargo.toml
pseudoc-gui/src/: main.rs
src/: backend.rs  common.rs  inference.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/backend/: dot.rs  pseudo.rs
src/common/: arena.rs  ast.rs  error.rs  src.rs
tests/: semi.psc  simple.psc  test.rs
tests/snapshots/: test__insta_test@para.psc.snap  test__insta_test@semi.psc.snap  test__insta_test@simple.psc.snap  test__insta_test@test.psc.snap
