[package]
name = "pseudoc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pseudoc = { path = ".." }
eframe = "0.14.0"
rfd = "0.5.1"

[patch.crates-io.egui]
git = "https://github.com/emilk/egui.git"
rev = "2af2e8bad51c97557ec03f5a1972a3737cba04e7"
